--- a/index.html
+++ b/index.html
@@ -117,7 +117,14 @@
           <a href="detail.html">
             <h1> View Large Picture </h1>
         </a>
+
+         <hr>
+     &copy;<small>Anish Vivekanadan, 301381398, COMP213,Semester 1 </small>
         </body>
+        <!----  This is a comment-->
+        <!-- <p>Anish Vivekanandan 30138138</p> -->
+    <!---- Comments are not displayed in browser -->
+
 
 </html>
 
